--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 # production
 /build
 
+# data
+/Store
+#
+/Source
+
 # misc
 .DS_Store
 .env.local
@@ -21,3 +26,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# file
+.pdf
